--- a/langs/ru.json
+++ b/langs/ru.json
@@ -13,5 +13,6 @@
   "ON_SAVE": "Сохранить",
   "REGISTRATION": "Регистрация",
   "NAME": "Имя",
-  "PASS": "Пароль"
+  "PASS": "Пароль",
+  "NOT_LOGGED": " Вы не вошли в систему"
 }
