template for markers

--- a/langs/en.json
+++ b/langs/en.json
@@ -14,5 +14,6 @@
   "REGISTRATION": "Registration",
   "NAME": "Name",
   "PASS": "Pass",
-  "NOT_LOGGED": "You are not logged in"
+  "NOT_LOGGED": "You are not logged in",
+  "MY_MARKER": "Markers"
 }
