--- a/langs/ru.json
+++ b/langs/ru.json
@@ -14,5 +14,6 @@
   "REGISTRATION": "Регистрация",
   "NAME": "Имя",
   "PASS": "Пароль",
-  "NOT_LOGGED": " Вы не вошли в систему"
+  "NOT_LOGGED": " Вы не вошли в систему",
+  "MY_MARKER": "Маркеры"
 }
