mcc add red points

--- a/langs/en.json
+++ b/langs/en.json
@@ -15,5 +15,6 @@
   "NAME": "Name",
   "PASS": "Pass",
   "NOT_LOGGED": "You are not logged in",
-  "MY_MARKER": "Markers"
+  "MY_MARKER": "Markers",
+  "GL520BS": "Gl520 Mobile Cells"
 }
