--- a/langs/ru.json
+++ b/langs/ru.json
@@ -15,5 +15,6 @@
   "NAME": "Имя",
   "PASS": "Пароль",
   "NOT_LOGGED": " Вы не вошли в систему",
-  "MY_MARKER": "Маркеры"
+  "MY_MARKER": "Маркеры",
+  "GL520BS": "GL520 Сотовые Базовые Станции"
 }
