--- a/langs/en.json
+++ b/langs/en.json
@@ -16,5 +16,5 @@
   "PASS": "Pass",
   "NOT_LOGGED": "You are not logged in",
   "MY_MARKER": "Markers",
-  "GL520BS": "Gl520 Mobile Cells"
+  "GL520BS": "GL520 Location"
 }
