--- a/langs/ru.json
+++ b/langs/ru.json
@@ -16,5 +16,5 @@
   "PASS": "Пароль",
   "NOT_LOGGED": " Вы не вошли в систему",
   "MY_MARKER": "Маркеры",
-  "GL520BS": "GL520 Сотовые Базовые Станции"
+  "GL520BS": "GL520 Location"
 }
