--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -3,7 +3,7 @@
   "IN_CONNECTION": "Connection",
   "SIGN_IN": "Sign in",
   "JOURNAL": "Journal",
-  "DOWNLOAD_GPX": "Download GPX",
+  "UPLOAD_GPX": "Upload GPX",
   "IMPORT_FROM_GOOGLE_KML": "Import from Google KML",
   "PROFILE": "Profile",
   "FRIENDS": "Friends",
