--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -3,7 +3,7 @@
   "IN_CONNECTION": "На связи",
   "SIGN_IN": "Войти",
   "JOURNAL": "Журнал",
-  "DOWNLOAD_GPX": "Загрузить GPX",
+  "UPLOAD_GPX": "Загрузить GPX",
   "IMPORT_FROM_GOOGLE_KML": "Импорт from Google KML",
   "PROFILE": "Профиль",
   "FRIENDS": "Друзья",
